<resources>
    <string name="app_name">BibleReminder</string>
    <string name="accessibility_description">
        Detects when the Bible app is opened to provide reminders.
    </string>
    <string name="main_page_title">Bible Reminder</string>
    <string name="accessibility_permission">Accessibility Access</string>
    <string name="overlay_permission">Overlay Access</string>
    <string name="notification_permission">Notification Access</string>
    <string name="usage_permission">Usage Access</string>
    <string name="service_switch_txt">Service Enabled</string>
    <string name="bible_apps_btn_text">Select Bible Apps</string>
    <string name="limited_apps_btn_text">Selected Limited Apps</string>
    <string name="time_reset_btn_text">Reset Time</string>
    <string name="app_icon_description">App Icon</string>
    <string name="time_ratio_label">Bible App Time Ratio</string>
    <string name="open_bible_btn">Open You Version</string>
    <string name="open_bible_txt">Time to take a break and read your Bible!</string>
    <string name="bible_switch_txt">You Version Installed</string>
    <string name="info">Created by Owen Dechow</string>
    <string name="access_btn_info_text">(?)</string>
    <string name="access_info_txt">Access Info Text</string>
    <string name="access_info_back_btn_txt">Return</string>
</resources>