<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:minWidth="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_page_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/accessibility_switch"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/accessibility_permission"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/access_info_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:contentDescription="@string/access_btn_info_text"
                android:includeFontPadding="false"
                android:text="@string/access_btn_info_text" />

        </LinearLayout>

        <Switch
            android:id="@+id/overlay_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/overlay_permission"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/notification_permission"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/bible_installed_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/bible_switch_txt"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/bible_apps_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bible_apps_btn_text" />

        <Button
            android:id="@+id/limited_apps_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limited_apps_btn_text" />

        <Button
            android:id="@+id/time_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_reset_btn_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_ratio_label" />

            <SeekBar
                android:id="@+id/bible_app_time_seek"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/bible_app_view_number"
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Switch
            android:id="@+id/service_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/service_switch_txt"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
